perf: font preloads, theme version constant, font path fix, remove dead code
- Add preload hints for Gotham-Book and Gotham-Bold (most-used weights)
  so browser fetches them immediately rather than discovering via CSS
- Add TLC_VERSION constant (1.1.0) for child theme asset versioning
  Decouples our cache keys from Salient updates via nectar_get_theme_version()
- Switch enqueue.php to use TLC_VERSION instead of nectar_get_theme_version()
- Fix absolute font paths in fonts.scss → relative paths (../../fonts/)
  Prevents 404s if site moves to a subdirectory or theme is renamed
- Delete custom.js (registered but never enqueued, functionality covered by forms.js)

--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-BlackItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-BlackItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-BlackItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-BlackItalic.woff') format('woff');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Book.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Book.woff') format('woff');
+    src: url('../../fonts/Gotham-Book.woff2') format('woff2'),
+        url('../../fonts/Gotham-Book.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-BoldItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-BoldItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-BoldItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-LightItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-LightItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-LightItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-LightItalic.woff') format('woff');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Medium.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Medium.woff') format('woff');
+    src: url('../../fonts/Gotham-Medium.woff2') format('woff2'),
+        url('../../fonts/Gotham-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-MediumItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-MediumItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-MediumItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-MediumItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-ThinItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-ThinItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-ThinItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-ThinItalic.woff') format('woff');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'Gotham Ultra';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Ultra.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Ultra.woff') format('woff');
+    src: url('../../fonts/Gotham-Ultra.woff2') format('woff2'),
+        url('../../fonts/Gotham-Ultra.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -72,8 +72,8 @@
 
 @font-face {
     font-family: 'Gotham Ultra';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-UltraItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-UltraItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-UltraItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-UltraItalic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -81,8 +81,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-XLight.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-XLight.woff') format('woff');
+    src: url('../../fonts/Gotham-XLight.woff2') format('woff2'),
+        url('../../fonts/Gotham-XLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -90,8 +90,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Black.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Black.woff') format('woff');
+    src: url('../../fonts/Gotham-Black.woff2') format('woff2'),
+        url('../../fonts/Gotham-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -99,8 +99,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Bold.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Bold.woff') format('woff');
+    src: url('../../fonts/Gotham-Bold.woff2') format('woff2'),
+        url('../../fonts/Gotham-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -108,8 +108,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-BookItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-BookItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-BookItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-BookItalic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -117,8 +117,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Light.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Light.woff') format('woff');
+    src: url('../../fonts/Gotham-Light.woff2') format('woff2'),
+        url('../../fonts/Gotham-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -126,8 +126,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-Thin.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-Thin.woff') format('woff');
+    src: url('../../fonts/Gotham-Thin.woff2') format('woff2'),
+        url('../../fonts/Gotham-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -135,8 +135,8 @@
 
 @font-face {
     font-family: 'Gotham';
-    src: url('/wp-content/themes/tlc-theme/fonts/Gotham-XLightItalic.woff2') format('woff2'),
-        url('/wp-content/themes/tlc-theme/fonts/Gotham-XLightItalic.woff') format('woff');
+    src: url('../../fonts/Gotham-XLightItalic.woff2') format('woff2'),
+        url('../../fonts/Gotham-XLightItalic.woff') format('woff');
     font-weight: 200;
     font-style: italic;
     font-display: swap;
